# Week_Of_Code_2021

./: .gitignore  .gitmodules  README.md  update.sh
Client/: draw.js  main.html  main.js  style.css
Client/js/: components.js  draw.js  main.js  mapediting.js  userinput.js  utility.js
Server/: main.rs
Server/rust/: Cargo.toml
Server/rust/src/: args.rs  error.rs  logging.rs  main.rs
Server/rust/src/server/: map.rs  mod.rs  process.rs
Server/rust/src/server/entity/: bounding.rs  entity.rs  mod.rs
Server/rust/src/server/map/: chunk.rs  element.rs  generation.rs  map.rs  mod.rs
Server/rust/src/server/state/: state.rs
