[package]
name = "game_server"
version = "0.1.0"
authors = ["Ethan <Ethan.Hunt@ScienceAndPizza.com>", "Carter <CarterPlasek@gmail.com>", "Jordan <Jordan.Hofstrand@ScienceAndPizza.com>", "Ian <>", "Rochester <Rochestnut@ScienceAndPizza.com>", "Brandutchmen <>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aci = { git = "https://github.com/ACRONYM-Group/ACIRustClient", version="0.1.4", branch="main"}
ansi_term = "0.12.1"
env_logger = "0.8.2"
log = "0.4.11"
serde_json = "1.0"
tokio = {version="0.3.5", features = ["full"]}
